--- a/css/styles.css
+++ b/css/styles.css
@@ -137,31 +137,42 @@ a {
 .animated-button {
   display: inline-block;
   padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
   text-decoration: none;
   color: #fff;
   background-color: #2bc9b4;
   border-radius: 5px;
   overflow: hidden;
   position: relative;
-  z-index: 1;
+  transition: background-color 0.3s ease;
 }
 
-.animated-button::before {
-  content: "";
+.animated-button:hover {
+  background-color: #228c82;
+}
+
+/* Efecto de onda */
+.animated-button:after {
+  content: '';
+  display: block;
   position: absolute;
-  background: #17a095;
-  height: 100%;
+  background: rgba(255, 255, 255, 0.3);
   width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
-  z-index: -1;
-  transition: transform 0.3s ease-out;
-  transform: scaleX(0);
-  transform-origin: 0 100%;
+  pointer-events: none;
+  animation: wave 0.6s linear;
 }
 
-.animated-button:hover::before {
-  transform: scaleX(1);
+@keyframes wave {
+  0% {
+      transform: scale(0, 0);
+  }
+  100% {
+      transform: scale(1, 1);
+  }
 }
 footer {
   background-color: #333;
@@ -174,4 +185,19 @@ h1{
 }
 p{
   font-weight: bold;
+}
+
+/* DESDE ACA EN ADELANTE RESPONSIVE*/
+@media only screen and (max-width: 768px) {
+  .animated-button {
+      padding: 8px 16px;
+      font-size: 14px;
+  }
+  .mainContainer{
+    flex-direction: column;
+  }
+  .navHeader{
+    font-size: 10px;
+    flex-direction: row;
+  }
 }
